argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.docker.localhost`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    # - kind: Rule
    #   match: Host(`argocd.example.com`) && Header(`Content-Type`, `application/grpc`)
    #   priority: 11
    #   services:
    #     - name: argocd-server
    #       port: 80
    #       scheme: h2c
  tls:
    certResolver: default
